2-nginx-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
    layer: frontend
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - nodePort: 30001
      port: 80
      targetPort: 80
