00-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bemis-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: nginx
    layer: frontend
spec:
  ingressClassName: public
  rules:
  - host: bemis.inno.test
    http:
      paths:
        - pathType: Exact
          path: "/"
          backend:
            service:
              name: nginx
              port:
                number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
    layer: frontend
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 80
    protocol: TCP
